<resources>
    <string name="app_name">ITicket</string>
    <string name="skip_introduction">Skip Introduction</string>
    <string name="next">Next</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">It\'s easier to find out\nwhich movies are airing</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Don\'t worry about\nmissing the latest movie</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Use e-wallet for transactions</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="hint_username">Input username here</string>
    <string name="password">Password</string>
    <string name="hint_password">Input password here</string>
    <string name="fullname">Full Name</string>
    <string name="hint_fullname">Input your full name here</string>
    <string name="email">Email</string>
    <string name="hint_email">Input your email here</string>
    <string name="upload_later">Upload Later</string>
    <string name="welcome">Welcome,\nArga Hutama!</string>
    <string name="photo">Photo</string>
    <string name="save_picture">Save Picture</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="story_board">Story Board</string>
    <string name="whos_played">Who\'s Played</string>
    <string name="choose_seat">Choose Seat</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="cancel">Cancel</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="purchase_now">Purchase Now</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="your_balance">Your Balance</string>
    <string name="transaction_history">Transaction History</string>
    <string name="my_history">My History</string>
    <string name="keep_it_up_to_date">Keep it up to date</string>
    <string name="see_ticket">See Ticket</string>
    <string name="happy_watching">Happy Watching</string>
    <string name="back">Back</string>
    <string name="items">Items</string>
</resources>