<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout tools:context=".checkout.CheckoutActivity" android:background="@color/colorBlue" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <Button android:background="@drawable/shape_rectangle_grey" android:layout_height="wrap_content" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/colorWhite" android:text="@string/cancel" android:layout_marginBottom="24dp" android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:id="@+id/button2"/>

    <TextView android:layout_height="wrap_content" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorWhite" android:text="@string/checkout" android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:id="@+id/tv_hello" app:layout_constraintTop_toTopOf="parent" android:textStyle="bold" android:textSize="24sp" android:gravity="center" android:layout_marginTop="16dp"/>

    <ImageView android:layout_height="40dp" android:layout_width="40dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:id="@+id/imageView3" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" app:srcCompat="@drawable/ic_arrow_back_white_24dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" android:textColor="@color/colorWhite" android:text="@string/when" android:layout_marginStart="16dp" android:id="@+id/textView21" android:textSize="18sp" android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" android:textColor="@color/colorWhite" android:text="@string/date_time" android:layout_marginStart="16dp" android:id="@+id/textView22" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView21" android:drawablePadding="10dp" android:drawableLeft="@drawable/ic_calendar"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" android:textColor="@color/colorWhite" android:text="@string/cinema" android:layout_marginStart="16dp" android:id="@+id/textView23" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView22" android:drawablePadding="10dp" android:drawableLeft="@drawable/ic_theatre"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorWhite" tools:text="12 Aug, 10 AM" android:layout_marginEnd="16dp" android:id="@+id/textView24" android:textStyle="bold" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView21"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorWhite" tools:text="Depok Mall, Cinema 3" android:layout_marginEnd="16dp" android:id="@+id/textView25" app:layout_constraintTop_toTopOf="@+id/textView23" android:textStyle="bold"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" android:textColor="@color/colorWhite" android:text="Items" android:layout_marginStart="16dp" android:id="@+id/textView26" android:textSize="18sp" android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView23"/>

    <androidx.recyclerview.widget.RecyclerView android:layout_height="wrap_content" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:id="@+id/recyclerView2" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView26"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" android:textColor="@color/colorWhite" android:text="@string/e_wallet" android:layout_marginStart="16dp" android:id="@+id/textView27" android:textSize="18sp" android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/recyclerView2"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" android:textColor="@color/colorWhite" android:text="@string/total_balance" android:layout_marginStart="16dp" android:id="@+id/textView28" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView27"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorPink" tools:text="IDR 140.000" android:layout_marginEnd="16dp" android:id="@+id/textView29" app:layout_constraintTop_toTopOf="@+id/textView28" android:textStyle="bold"/>

    <TextView android:layout_height="wrap_content" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorPink" android:text="Your E-Wallet balance is not enough to make this transaction" android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:id="@+id/textView30" android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView28"/>

</androidx.constraintlayout.widget.ConstraintLayout>